Update index - Copy.html

--- a/index - Copy.html
+++ b/index - Copy.html
@@ -70,7 +70,7 @@
 		</div>
 		<center>
 		<a href="ss.png">sertifikat</a>
-		<a href="../enamBelas/navbar/index.html">back</a>
+		<a href="index.html">back</a>
 		</center>
 		</div>
 	<body>
