--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 		<div class="logo">MRAY</div>
 		<ul class="nav-links">
 			<li><a href="#hero">Home</a></li>
-			<li><a href="../../latihan4/index.html">Profile</a></li>
+			<li><a href="index - Copy.html">Profile</a></li>
 			<li><a href="#">Contact</a></li>
 			<li><a href="pengunjung.html">Visiter Data</a></li>
 		</ul>
